--- a/eventi/2018-09-29/index.html
+++ b/eventi/2018-09-29/index.html
@@ -1,6 +1,6 @@
 ---
 layout: event
-title: GOAT SIDE EVENT 29.09.2018
+title: GOAT SIDE EVENT 29. 9. 2018
 ---
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
@@ -25,7 +25,7 @@ title: GOAT SIDE EVENT 29.09.2018
 </head>
 <body lang="en" dir="ltr">
 <p style="margin-bottom: 0in; line-height: 115%; page-break-before: auto; page-break-after: auto">
-<b>Lokacija</b>: D.D. Vič</p>
+<b>Lokacija</b>: Dijaški dom Vič, Ljubljana</p>
 <p style="margin-bottom: 0in; line-height: 115%"><br/>
 
 </p>
@@ -35,12 +35,12 @@ title: GOAT SIDE EVENT 29.09.2018
 
 </p>
 <p style="margin-bottom: 0in; line-height: 115%"><b>Nagradni sklad</b>:
-1 box (tekoči set) za 1. mesto</p>
+1 box seta po izbiri za 1. mesto</p>
 <p style="margin-bottom: 0in; line-height: 115%"><br/>
 
 </p>
 <p style="margin-bottom: 0in; line-height: 115%"><b>Čas začetka</b>:
-okvirno po prvih rundah main eventa</p>
+okvirno po prvih rundah main eventa (ob cca. 12.00)</p>
 <p style="margin-bottom: 0in; line-height: 115%"><br/>
 
 </p>
@@ -51,16 +51,16 @@ okvirno po prvih rundah main eventa</p>
 
 </p>
 <p align="left" style="margin-bottom: 0in; line-height: 0.2in"><b>Exarion
-Universe: brez&nbsp;</b></p>
+Universe</b>: brez&nbsp;</p>
 <p style="margin-bottom: 0in; line-height: 115%"><br/>
 
 </p>
 <p align="left" style="margin-bottom: 0in; line-height: 0.2in"><b>Fusion
-Deck limit: brez</b></p>
+Deck limit</b>: brez</p>
 <p style="margin-bottom: 0in; line-height: 115%"><br/>
 
 </p>
 <p align="left" style="margin-bottom: 0in; line-height: 0.2in"><b>Main
-Deck limit: 60</b></p>
+Deck limit</b>: 60</p>
 </body>
 </html>
