--- a/lestvica/index.html
+++ b/lestvica/index.html
@@ -6,14 +6,15 @@ title: Lestvica
 	<h1>Lestvica igralcev lige 2018/19</h1>
 	<p>
 	<ul>
-		<li>Miha Flisek | 10</li>
-		<li>Jaka Fortunat | 8</li>
-		<li>Alen Bizjak | 7</li>
-		<li>Luka Krašna | 6</li>
-		<li>Matija Saksida | 6</li>
-		<li>Nik Vidmar | 6</li>
-		<li>Jaka Basej | 6</li>
-		<li>Gašper Govekar | 0</li>
+		<li><b>Ime in priimek igralca: seštevek doseženih točk | seštevek zmag | seštevek porazov | seštevek izenačenih iger | število udeleženih turnirjev | povprečje doseženih točk na turnir
+		<li>Miha Flisek: 10 | 3 | 0 | 1 | 1 | 10</li>
+		<li>Jaka Fortunat: 8 | 2 | 0 | 2 | 1 | 8</li>
+		<li>Alen Bizjak: 7 | 2 | 1 | 1 | 1 | 7</li>
+		<li>Luka Krašna: 6 | 2 | 2 | 0 | 1 | 6</li>
+		<li>Matija Saksida: 6 | 2 | 2 | 0 | 1 | 6</li>
+		<li>Nik Vidmar: 6 | 2 | 2 | 0 | 1 | 6</li>
+		<li>Jaka Basej: 6 | 2 | 2 | 0 | 1 | 6</li>
+		<li>Gašper Govekar: 0 | 0 | 4 | 0 | 1 | 0</b></li>
 	</ul>
 	</p>
 </div><!-- /.blurb -->
